--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  font-family: Tahoma, sans-serif;
+  font-family: baskerville, serif;
   margin: 0;
 }
 
@@ -12,30 +12,23 @@ body {
   padding: 80px;
   text-align: center;
   height: max-height;
-  background: #A394B8;
+  background: #d8bcff;
   color: #412664;
-}
-/* Style the header paragraph */
-.header p {
-	border: inset;
-    background: linear-gradient(90deg, rgba(178,156,102,1) 7%, rgba(155,125,52,1) 29%, rgba(187,172,137,1) 63%, rgba(152,127,66,1) 86%, rgba(166,143,84,1) 100%);
-  	border: inset;
-  	border-color: #836211;
+  text-size-adjust: 30px;
 }
 	
 /* Increase the font size of the h1 element */
 .header h1 {
-  font-size: 40px;
+  font-size: 60px;
   color: #412664;
-  background: linear-gradient(90deg, rgba(178,156,102,1) 7%, rgba(155,125,52,1) 29%, rgba(187,172,137,1) 63%, rgba(152,127,66,1) 86%, rgba(166,143,84,1) 100%);
-  border: inset;
+  background: #d8bcff;
   border-color: #836211;
 }
 
 /* Style the top navigation bar */
 .navbar {
   overflow: hidden;
-  background: #A394B8;
+  background: #d8bcff;
 }
 
 /* Style the navigation bar links */
@@ -47,8 +40,8 @@ body {
   padding: 14px 20px;
   text-decoration: none;
   border: outset;
-  border-color: rgba(187,172,137);
-  background: linear-gradient(90deg, rgba(178,156,102,1) 7%, rgba(155,125,52,1) 29%, rgba(187,172,137,1) 63%, rgba(152,127,66,1) 86%, rgba(166,143,84,1) 100%);
+  border-color: #d8bcff;
+  background: #d8bcff
 }
 
 /* Change color on hover */
@@ -61,23 +54,22 @@ body {
 .row {  
   display: flex;
   flex-wrap: wrap;
-  background: #A394B8;
+  background: #d8bcff;
 }
 
 /* Main column */
 .main {   
   flex: 70%;
-  background-color: #bbac89;
+  background-color: #d8bcff;
   padding: 20px;
   color: #412664;
   margin: auto;
   max-width: 750px;
-  background: #decfac;
+  background: #d8bcff;
 }
 
-
 body {
-  background: #A394B8;
+  background: #d8bcff;
   
 }
 
@@ -93,7 +85,7 @@ body {
   padding: 20px;
   text-align: center;
   background: #fffaf0;
-  color: #A394B8;
+  color: #d8bcff;
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
