--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,7 @@ body {
   height: max-height;
   background: #d8bcff;
   color: #412664;
-  text-size-adjust: 30px;
 }
-	
 /* Increase the font size of the h1 element */
 .header h1 {
   font-size: 60px;
@@ -24,7 +22,10 @@ body {
   background: #d8bcff;
   border-color: #836211;
 }
-
+/* Style the header paragraph */
+.header p {
+    font-size: 30px;
+}
 /* Style the top navigation bar */
 .navbar {
   overflow: hidden;
@@ -70,13 +71,12 @@ body {
 
 body {
   background: #d8bcff;
-  
 }
 
 /* Fake image, just for this example */
 .fakeimg {
-  background-color: #c8aa51;
-  width: 100%;
+  background: radial-gradient(circle, rgba(141,109,29,1) 10%, rgba(152,119,43,1) 22%,rgba(166,143,84,1) 35%, rgba(149,115,35,1) 52%, rgba(136,102,18,1) 64%, rgba(162,136,72,1) 90%);
+  width: 50%;
   padding: 20px;
 }
 
@@ -84,8 +84,8 @@ body {
 .footer {
   padding: 20px;
   text-align: center;
-  background: #fffaf0;
-  color: #d8bcff;
+  background: #d8bcff;
+  color: #412664;
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
