--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,10 @@ body {
 
 /* Style the header */
 .header {
-  
-  padding: 80px;
+  padding-top: 35px;
+  padding-bottom: 35px;
+  padding-left: 250px;
+  padding-right: 250px;
   text-align: center;
   /* height: max-height; */
   background: url(Resources/Images/mamieBackground.jpg) no-repeat center fixed;
@@ -18,7 +20,7 @@ body {
   height: 500px;
   position: relative;
   /* background: #A394B8; */
-  color: #412664;
+  color: #211433;
   
   /* padding: 80px;
   text-align: center;
@@ -29,9 +31,11 @@ body {
 /* Increase the font size of the h1 element */
 .header h1 {
   font-size: 60px;
-  color: #412664;
-  background: #d8bcff;
-  border-color: #836211;
+  color:rgba(168, 132, 41);
+  background-color: rgba(250, 235, 215, 0.585);
+  padding: 60px;
+  border-top-left-radius: 75%;
+  border-top-right-radius: 75%;
 }
 /* Style the header paragraph */
 .header p {
