--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,8 @@ body {
 /* Increase the font size of the h1 element */
 .header h1 {
   font-size: 60px;
-  color:rgba(168, 132, 41);
-  background-color: rgba(250, 235, 215, 0.585);
+  color:#211433;
+  background-color: #f8f3f73c;
   padding: 60px;
   border-top-left-radius: 75%;
   border-top-right-radius: 75%;
@@ -44,7 +44,7 @@ body {
 /* Style the top navigation bar */
 .navbar {
   overflow: hidden;
-  background: #d8bcff;
+  background: f8f3f7;
 }
 
 /* Style the navigation bar links */
@@ -56,8 +56,8 @@ body {
   padding: 14px 20px;
   text-decoration: none;
   border: outset;
-  border-color: #d8bcff;
-  background: #d8bcff
+  border-color: #f8f3f7;
+  background:#f8f3f7;
 }
 
 /* Change color on hover */
@@ -70,24 +70,23 @@ body {
 .row {  
   display: flex;
   flex-wrap: wrap;
-  background: #d8bcff;
+  background: #f8f3f7;
 }
 
 /* Main column */
 .main {   
   flex: 70%;
-  background-color: #d8bcff;
+  background-color: #f8f3f7;
   padding: 20px;
   color: #412664;
   margin: auto;
   max-width: 750px;
-  background: #d8bcff;
+  background: #f8f3f7;
 }
 
 body {
-  background: #d8bcff;
+  background: #f8f3f7;
 }
-
 /* Fake image, just for this example */
 .fakeimg {
   background: radial-gradient(circle, rgba(141,109,29,1) 10%, rgba(152,119,43,1) 22%,rgba(166,143,84,1) 35%, rgba(149,115,35,1) 52%, rgba(136,102,18,1) 64%, rgba(162,136,72,1) 90%);
@@ -99,7 +98,7 @@ body {
 .footer {
   padding: 20px;
   text-align: center;
-  background: #d8bcff;
+  background: #f8f3f7;
   color: #412664;
 }
 
