--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,13 @@ body {
 
 /* Style the header */
 .header {
-  padding-top: 35px;
+  /* padding-top: 35px; */
   padding-bottom: 35px;
   padding-left: 250px;
   padding-right: 250px;
   text-align: center;
   /* height: max-height; */
-  background: url(Resources/Images/mamieBackground.jpg) no-repeat center fixed;
+  background: url(Resources/Images/mamieBackground.jpg) no-repeat center ;
   background-size: cover;
   height: 500px;
   position: relative;
@@ -30,12 +30,14 @@ body {
 }
 /* Increase the font size of the h1 element */
 .header h1 {
-  font-size: 60px;
-  color:rgba(168, 132, 41);
-  background-color: rgba(250, 235, 215, 0.585);
+  color: white;
+  float: left;
+  /* font-size: 60px;
+  padding: 60px;
+  /background-color: rgba(250, 235, 215, 0.585);
   padding: 60px;
   border-top-left-radius: 75%;
-  border-top-right-radius: 75%;
+  border-top-right-radius: 75%; */
 }
 /* Style the header paragraph */
 .header p {
@@ -44,20 +46,21 @@ body {
 /* Style the top navigation bar */
 .navbar {
   overflow: hidden;
-  background: #d8bcff;
+  text-align: center;
 }
 
 /* Style the navigation bar links */
 .navbar a {
-  float: left;
-  display: block;
-  color: #412664;
+  display: inline;
+  color: white;
   text-align: center;
-  padding: 14px 20px;
+  font-size: large;
+  padding: 30px 30px;
   text-decoration: none;
-  border: outset;
-  border-color: #d8bcff;
-  background: #d8bcff
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  font-weight: bold;
+  top: 0;
 }
 
 /* Change color on hover */
@@ -70,22 +73,21 @@ body {
 .row {  
   display: flex;
   flex-wrap: wrap;
-  background: #d8bcff;
+  background: white;
 }
 
 /* Main column */
 .main {   
   flex: 70%;
-  background-color: #d8bcff;
+  background-color: white;
   padding: 20px;
   color: #412664;
   margin: auto;
   max-width: 750px;
-  background: #d8bcff;
 }
 
 body {
-  background: #d8bcff;
+  background: white;
 }
 
 /* Fake image, just for this example */
@@ -99,7 +101,7 @@ body {
 .footer {
   padding: 20px;
   text-align: center;
-  background: #d8bcff;
+  background: white;
   color: #412664;
 }
 
