--- a/styles.css
+++ b/styles.css
@@ -1,119 +1,21 @@
-* {
-  box-sizing: border-box;
+body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+
+body, html {
+  height: 100%;
+  line-height: 1.8;
 }
 
-body {
-  font-family: baskerville, serif;
-  margin: 0;
-}
-
-/* Style the header */
-.header {
-  padding-top: 35px;
-  padding-bottom: 35px;
-  padding-left: 250px;
-  padding-right: 250px;
-  text-align: center;
-  /* height: max-height; */
-  background: url(Resources/Images/mamieBackground.jpg) no-repeat center fixed;
+/* Full height image header */
+.bgimg-1 {
+  background-position: center;
   background-size: cover;
-  height: 500px;
-  position: relative;
-  /* background: #A394B8; */
-  color: #211433;
+  background-image: url("Resources/Images/mamieBackground.jpg");
+  min-height: 100%;
+}
+
+.w3-bar .w3-button {
+  padding: 16px;
+
   
-  /* padding: 80px;
-  text-align: center;
-  height: max-height;
-  background: #d8bcff;
-  color: #412664; */
-}
-/* Increase the font size of the h1 element */
-.header h1 {
-  font-size: 60px;
-  color:#211433;
-  background-color: #f8f3f73c;
-  padding: 60px;
-  border-top-left-radius: 75%;
-  border-top-right-radius: 75%;
-}
-/* Style the header paragraph */
-.header p {
-    font-size: 30px;
-}
-/* Style the top navigation bar */
-.navbar {
-  overflow: hidden;
-  background: f8f3f7;
-}
 
-/* Style the navigation bar links */
-.navbar a {
-  float: left;
-  display: block;
-  color: #412664;
-  text-align: center;
-  padding: 14px 20px;
-  text-decoration: none;
-  border: outset;
-  border-color: #f8f3f7;
-  background:#f8f3f7;
 }
-
-/* Change color on hover */
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Column container */
-.row {  
-  display: flex;
-  flex-wrap: wrap;
-  background: #f8f3f7;
-}
-
-/* Main column */
-.main {   
-  flex: 70%;
-  background-color: #f8f3f7;
-  padding: 20px;
-  color: #412664;
-  margin: auto;
-  max-width: 750px;
-  background: #f8f3f7;
-}
-
-body {
-  background: #f8f3f7;
-}
-/* Fake image, just for this example */
-.fakeimg {
-  background: radial-gradient(circle, rgba(141,109,29,1) 10%, rgba(152,119,43,1) 22%,rgba(166,143,84,1) 35%, rgba(149,115,35,1) 52%, rgba(136,102,18,1) 64%, rgba(162,136,72,1) 90%);
-  width: 50%;
-  padding: 20px;
-}
-
-/* Footer */
-.footer {
-  padding: 20px;
-  text-align: center;
-  background: #f8f3f7;
-  color: #412664;
-}
-
-/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 700px) {
-  .row {   
-    flex-direction: column;
-  }
-}
-
-/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-@media screen and (max-width: 400px) {
-  .navbar a {
-    float: none;
-    width:100%;
-  }
-}
-
