--- a/styles.css
+++ b/styles.css
@@ -1,52 +1,28 @@
 * {
-  box-sizing: border-box;
+  
 }
 
 body {
-  font-family: baskerville, serif;
+  font-family:Georgia, 'Times New Roman', Times, serif;
   margin: 0;
 }
 
 /* Style the header */
 .header {
-  /* padding-top: 35px; */
-  padding-bottom: 35px;
-  padding-left: 250px;
-  padding-right: 250px;
   text-align: center;
-  /* height: max-height; */
-  background: url(Resources/Images/mamieBackground.jpg) no-repeat center ;
+  background: url(Resources/Images/mamiebackground1.jpeg) no-repeat center ;
   background-size: cover;
-  height: 500px;
-  position: relative;
-  /* background: #A394B8; */
-  color: #211433;
-  
-  /* padding: 80px;
-  text-align: center;
-  height: max-height;
-  background: #d8bcff;
-  color: #412664; */
+  min-height: 100%;
+  background-position: center;
 }
-/* Increase the font size of the h1 element */
-.header h1 {
-  color: white;
-  float: left;
-  /* font-size: 60px;
-  padding: 60px;
-  /background-color: rgba(250, 235, 215, 0.585);
-  padding: 60px;
-  border-top-left-radius: 75%;
-  border-top-right-radius: 75%; */
-}
-/* Style the header paragraph */
-.header p {
-    font-size: 30px;
-}
+
 /* Style the top navigation bar */
 .navbar {
-  overflow: hidden;
   text-align: center;
+  padding-bottom: 25%;
+  position: sticky;
+  position: -webkit-sticky; 
+  top: 0;/* Safari */
 }
 
 /* Style the navigation bar links */
@@ -57,58 +33,44 @@ body {
   font-size: large;
   padding: 30px 30px;
   text-decoration: none;
-  position: -webkit-sticky; /* Safari */
-  position: sticky;
-  font-weight: bold;
-  top: 0;
 }
 
 /* Change color on hover */
 .navbar a:hover {
-  background-color: #ddd;
+  background-color: white;
   color: black;
 }
 
-/* Column container */
-.row {  
-  display: flex;
-  flex-wrap: wrap;
-  background: white;
+
+/* Increase the font size of the h1 element */
+.header h1 {
+  color: white;
 }
 
-/* Main column */
-.main {   
-  flex: 70%;
-  background-color: white;
-  padding: 20px;
-  color: #412664;
-  margin: auto;
-  max-width: 750px;
+/* Style the header paragraph */
+.header p {
+  font-size: 30px;
+  color: white;
+  font-weight: bold;
 }
 
-body {
-  background: white;
-}
-
-/* Fake image, just for this example */
-.fakeimg {
-  background: radial-gradient(circle, rgba(141,109,29,1) 10%, rgba(152,119,43,1) 22%,rgba(166,143,84,1) 35%, rgba(149,115,35,1) 52%, rgba(136,102,18,1) 64%, rgba(162,136,72,1) 90%);
-  width: 50%;
-  padding: 20px;
-}
-
-/* Footer */
-.footer {
-  padding: 20px;
-  text-align: center;
-  background: white;
-  color: #412664;
+/* RSVP Button */
+.button {
+  color: white;
+  padding-bottom: 30px;
+  font-size: larger;
+  font-weight: bold;
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 1200px) {
   .row {   
     flex-direction: column;
+  }
+  .navbar a {
+    float: none;
+    display: block;
+    width:100%;
   }
 }
 
@@ -116,7 +78,9 @@ body {
 @media screen and (max-width: 400px) {
   .navbar a {
     float: none;
+    display: block;
     width:100%;
   }
 }
+
 
