--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 /* Style the header */
 .header {
   text-align: center;
-  background-image: url(Resources/Images/AdobeStock_455521834_Preview.jpeg);
+  background-image: url(Resources/Images/AdobeStock_455521834.jpeg);
   background-size:cover;
   min-height: 100%;
 }
@@ -28,7 +28,7 @@ body {
 /* Style the navigation bar links */
 .navbar a {
   display: inline;
-  color: white;
+  color: rgb(199, 176, 207);
   text-align: center;
   padding: 30px 20px;
   text-decoration: none;
@@ -42,8 +42,22 @@ body {
 
 /* Change color on hover */
 .navbar a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: rgb(199, 176, 207);;
+  color: white;
+}
+
+.hcontent{
+  background-color: white;
+  border-radius: 25% 25% 25% 25%;
+  color: rgb(199, 176, 207);
+  margin: 20% 40%;
+  max-width: 300px;
+}
+
+.button{
+  font-size: x-large;
+  color: rgb(199, 176, 207);;
+  text-decoration: none;
 }
 
 /* Style the container/contact section */
@@ -76,7 +90,7 @@ body {
 .square {
   width: 300px;
   height: 250px;
-  background: #805FA2;
+  background: rgb(199, 176, 207);;
   position: relative;
   top: 65px;
   display: inline-block;
@@ -84,7 +98,7 @@ body {
 .circle {
   width: 300px;
   height: 150px;
-  background: #805FA2;
+  background: rgb(199, 176, 207);;
   border-radius: 50%;
   position: absolute;
   left: 0px;
