--- a/Themes/indexTheme.css
+++ b/Themes/indexTheme.css
@@ -1,22 +1,21 @@
 body {
   font-family:Georgia, 'Times New Roman', Times, serif;
   margin: 0;
-  background-color:FCF0D9;
+  background-color:white;
 }
 * {
   box-sizing: border-box;
 }
  .fit-picture {
-    height: 380px;
-    width: 350;
-    border-radius: 30% 30% 0 0;
+    height: 480px;
+    width: 450;
+    border-radius: 45%;
     
 }
 
 /* Style the header */
 .header {
   text-align: center;
-  background-image: url("/Resources/Images/mamiebackground2.jpeg");
   background-size:cover;
   min-height: 100%;
 }
@@ -24,7 +23,7 @@ body {
 /* Style the top navigation bar */
 .navbar {
   overflow: hidden;
-  background-color: FCF0D9;
+  background-color: white;
   text-align: center;
   padding-left: 5px;
   padding-right: 50px;
@@ -49,11 +48,11 @@ body {
 /* Change color on hover */
 .navbar a:hover {
   background-color: rgb(199, 176, 207);
-  color: #FCF0D9;
+  color: white;
 }
 
 .hcontent{
-  background-color: #FCF0D9;
+  background-color: white;
   border-radius: 25% 25% 25% 25%;
   color: rgb(199, 176, 207);
   margin: 20% 40%;
@@ -69,7 +68,7 @@ body {
 
 .button:hover {
   background-color: rgb(199, 176, 207);
-  color: #FCF0D9;
+  color: white;
   text-decoration: underline;
 }
 
@@ -92,7 +91,7 @@ body {
 /* Style the container/contact section */
 .container {
   border-radius: 5px;
-  background-color: #FCF0D9;
+  background-color: white;
   padding: 120px;
 }
 
@@ -133,13 +132,12 @@ body {
   border-radius: 50%/65% 65% 0 0;
 }
 
-
 /* Create two columns that float next to eachother */
 .column {
   float: left;
-  width: 50%;
+  width: 100%;
   margin-top: 6px;
-  padding: 75px;
+  padding: 50%;
   background-color: white;
 }
 
@@ -185,7 +183,6 @@ body {
     width: 50%;
     margin-top: 6px;
     padding: 75px;
-    background-color: white;
   }
 /* Column 2 */
   
@@ -194,7 +191,6 @@ body {
   width: 50%;
   margin-top: 6px;
   padding: 75px;
-  background-color: white;
 }
 
 
@@ -238,6 +234,24 @@ body {
   background-color: white;
 }
 
+.column01 {
+  float: center;
+  width: 50%;
+  margin: auto;
+}
+.column02 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+  background: white;
+}
+.column02 {
+  float: right;
+  width: 25%;
+  margin-top: 6px;
+  background-clip: white;
+}
+
 /* Container 1 Row Adjusts */
 .rowh:after {
     content: "";
@@ -246,6 +260,7 @@ body {
   }
   
 .row:after {
+  background-color: purple;
   content: "";
   display: table;
   clear: both;
