--- a/Themes/indexTheme.css
+++ b/Themes/indexTheme.css
@@ -2,15 +2,48 @@ body {
   font-family:Georgia, 'Times New Roman', Times, serif;
   margin: 0;
   background-color:white;
+  scroll-behavior: smooth;
 }
 * {
   box-sizing: border-box;
 }
- .fit-picture {
-    height: 480px;
-    width: 450;
-    border-radius: 45%;
+
+
+.fit-picture {
+  height: 480px;
+  width: 450;
+  border-radius: 45%;
     
+}
+
+/* Style the top navigation bar */
+.navbar {
+  overflow: hidden;
+  background-color:rgb(199, 176, 207);
+  text-align: center;
+  padding: 20px;
+}
+
+/* Style the navigation bar links */
+.navbar a {
+  display: inline;
+  color: white;
+  text-align: center;
+  padding: 30px;
+  text-decoration: none;
+  font-size: larger;
+  
+}
+
+/* Right-aligned link */
+.navbar a.right {
+  margin-left: 200px;
+}
+
+/* Change color on hover */
+.navbar a:hover {
+  background-color: white;
+  color:  rgb(199, 176, 207);
 }
 
 /* Style the header */
@@ -18,51 +51,47 @@ body {
   text-align: center;
   background-size:cover;
   min-height: 100%;
-}
-
-/* Style the top navigation bar */
-.navbar {
-  overflow: hidden;
-  background-color: white;
-  text-align: center;
-  padding-left: 5px;
-  padding-right: 50px;
-}
-
-/* Style the navigation bar links */
-.navbar a {
-  display: inline;
-  color: rgb(199, 176, 207);
-  text-align: center;
-  padding: 30px 20px;
-  text-decoration: none;
-  font-size: larger;
-  float: left;
-}
-
-/* Right-aligned link */
-.navbar a.right {
-  float: right;
-}
-
-/* Change color on hover */
-.navbar a:hover {
-  background-color: rgb(199, 176, 207);
-  color: white;
+  margin-top: 20%;
+  margin-right: 175px;
+  margin-left: 100px;
 }
 
 .hcontent{
-  background-color: white;
-  border-radius: 25% 25% 25% 25%;
   color: rgb(199, 176, 207);
-  margin: 20% 40%;
-  max-width: 300px;
+  text-align: center;
+  float: left;
+}
+
+.sitename{
+  padding-top: 50px;
+  padding-left: 50px;
+  text-align: center;
+  font-size: 75px;
+}
+
+.hcontent p {
+  text-align: center;
+  font-size: 40px;
+}
+
+.hcontent a {
+  text-align: center;
+  font-size: 40px;
+}
+
+.hcontentright{
+  float: right;
+  width: 500px;
+  height: 550px;
+  position: relative;
+  margin-top: 25px;
+  background-color: rgb(199, 176, 207);
   padding: 30px 30px;
 }
 
 .button {
   font-size: x-large;
-  color: rgb(199, 176, 207);;
+  color: rgb(199, 176, 207);
   text-decoration: none;
 }
 
@@ -83,11 +112,11 @@ body {
 }  
 /* RSVP Button */
 
-.containerh {
+/* .containerh {
     border-radius: 5px;
     background-color: white;
     padding: 10px;
-}
+} */
 /* Style the container/contact section */
 .container {
   border-radius: 5px;
@@ -234,11 +263,11 @@ body {
   background-color: white;
 }
 
-.column01 {
+/* .column01 {
   float: center;
   width: 50%;
   margin: auto;
-}
+} */
 .column02 {
   float: left;
   width: 25%;
