made some edits

--- a/Themes/indexTheme.css
+++ b/Themes/indexTheme.css
@@ -73,6 +73,7 @@ section {
 .headerRight {
   margin-right: auto;
   margin-left: auto;
+  margin-top: 15%;
   margin-bottom: 15%;
   width: 600px;
   height: 650px;
