added padding to shapes

--- a/Themes/indexTheme.css
+++ b/Themes/indexTheme.css
@@ -147,12 +147,14 @@ hr {
 }
 
 .column {
+  margin-top: 10%;
   float: left;
   width: 50%;
   position: relative;
 }
 
 .columnTwo {
+  margin-top: 10%;
   float: right;
   width: 50%;
   position: relative;
